@@ -1,3 +1,10 @@
+2007-09-19  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* src/Core/Banshee.Base/Banshee.Library/Import.cs:
+	* src/Core/Banshee.Base/StreamTagger.cs: Use TagLib to filter files
+	that don't contain audio only instead of filtering by the mimetype
+	which breaks for some mp4 files (BGO #472747)
+
 2007-09-04  Aaron Bockover  <abock@gnome.org>
 
 	* src/Core/Banshee.ThickClient: Migrated Banshee.ThickClient 
